src/contrib/SignalSource/NIDAQ/nidaq/nidaq.h

typedef char i8;
typedef short i16;
typedef long i32;
typedef unsigned long u32;
typedef double f64;
extern i16 WINAPI DIG_Filter_Config (
	i16        deviceNumber,
	i16        mode,
	i8         FAR * chanStr,
	f64        interval);
extern i16 WINAPI SCXI_TerminalBlockID_Read (
	i16        scxiID,
	i16        moduleSlot,
	i32        FAR * id);
extern i16 WINAPI ni62xx_CalStart (
	i16        device,
	i8         FAR * password);
extern i16 WINAPI ni62xx_CalAdjust (
	i16        device,
	u32        calMode,
	f64        FAR * measuredData,
	i16        numOfValues);
extern i16 WINAPI ni62xx_CalEnd (
	i16        device,
	u32        calAction);
extern i16 WINAPI ni62xx_SelfCalibrate (
	i16        device);
extern i16 WINAPI CalFetchInternalReference (
	i16        device,
	f64        FAR * referenceValue);
extern i16 WINAPI CalChangePassword (
	i16        device,
	i8         FAR * oldPassword,
	i8         FAR * newPassword);
extern i16 WINAPI CalFetchCount (
	i16        device,
	u32        calType,
	i32        FAR * calCount);
extern i16 WINAPI CalFetchDate (
	i16        device,
	u32        calType,
	i32        FAR * year,
	i32        FAR * month,
	i32        FAR * day);
extern i16 WINAPI CalFetchTemperature (
	i16        device,
	u32        calType,
	f64        FAR * temperature);
extern i16 WINAPI CalFetchMiscInfo (
	i16        device,
	i8         FAR * miscInfo);
extern i16 WINAPI CalStoreMiscInfo (
	i16        device,
	i8         FAR * miscInfo);