src/contrib/SignalSource/NIDAQ/nidaq/nidaq.pas

	ctrlCode:             i16
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_Filter_Config (
	deviceNumber:         i16;
	mode:                 i16;
	chanStr:              pi8;
	interval:             f64
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_TerminalBlockID_Read (
	scxiID:               i16;
	moduleSlot:           i16;
	id:                   pi32
	):nidaqStatus; stdcall; external nidaqdll;
function ni62xx_CalStart (
	device:               i16;
	password:             pi8
	):nidaqStatus; stdcall; external nidaqdll;
function ni62xx_CalAdjust (
	device:               i16;
	calMode:              u32;
	measuredData:         pf64;
	numOfValues:          i16
	):nidaqStatus; stdcall; external nidaqdll;
function ni62xx_CalEnd (
	device:               i16;
	calAction:            u32
	):nidaqStatus; stdcall; external nidaqdll;
function ni62xx_SelfCalibrate (
	device:               i16
	):nidaqStatus; stdcall; external nidaqdll;
function CalFetchInternalReference (
	device:               i16;
	referenceValue:       pf64
	):nidaqStatus; stdcall; external nidaqdll;
function CalChangePassword (
	device:               i16;
	oldPassword:          pi8;
	newPassword:          pi8
	):nidaqStatus; stdcall; external nidaqdll;
function CalFetchCount (
	device:               i16;
	calType:              u32;
	calCount:             pi32
	):nidaqStatus; stdcall; external nidaqdll;
function CalFetchDate (
	device:               i16;
	calType:              u32;
	year:                 pi32;
	month:                pi32;
	day:                  pi32
	):nidaqStatus; stdcall; external nidaqdll;
function CalFetchTemperature (
	device:               i16;
	calType:              u32;
	temperature:          pf64
	):nidaqStatus; stdcall; external nidaqdll;
function CalFetchMiscInfo (
	device:               i16;
	miscInfo:             pi8
	):nidaqStatus; stdcall; external nidaqdll;
function CalStoreMiscInfo (
	device:               i16;
	miscInfo:             pi8
	):nidaqStatus; stdcall; external nidaqdll;


implementation

end.


